feat: all API calls complete